<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6D67E4"
    tools:context=".activities.MainActivity">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarMain"
            android:background="@drawable/toolbar_bg"
            app:title="@string/app_name"
            app:titleTextColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/logInLayoutPass"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/log_in"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:requiresFadingEdge="horizontal"
                android:gravity="start"
                android:padding="5dp"
                android:background="@drawable/login_bg"
                android:layout_marginStart="150dp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="?actionBarSize"
        android:gravity="center"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarMain"
        android:background="#58287F">

        <ImageView
            android:id="@+id/GoLocalMusic"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:background="@drawable/music_icon_bg"
            android:src="@drawable/ic_baseline_music_note_24"
            android:contentDescription="@string/local_music"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/local_music"
            android:textSize="26sp"
            android:textColor="#FAD3E7"
            android:padding="2dp"
            android:gravity="center"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/GoOnlineMusic"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:background="@drawable/music_icon_bg"
            android:src="@drawable/ic_baseline_music_note_24"
            android:contentDescription="@string/online_music"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/online_music"
            android:textSize="26sp"
            android:textColor="#FAD3E7"
            android:padding="2dp"
            android:gravity="center"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/GoEveryMusic"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:background="@drawable/music_icon_bg"
            android:src="@drawable/ic_baseline_music_note_24"
            android:contentDescription="@string/every_music"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/every_music"
            android:textSize="26sp"
            android:textColor="#FAD3E7"
            android:padding="2dp"
            android:gravity="center"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>