<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0A2647"
    tools:context=".activities.SignUpActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarSignUp"
        android:background="@drawable/toolbar_bg"
        app:title="@string/app_name"
        app:titleTextColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/signInIntro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="@string/sign_up_to_keep_your_data_safe_online"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:requiresFadingEdge="horizontal"
        android:gravity="center"
        android:padding="5dp"
        android:layout_margin="20dp"
        android:background="@drawable/login_bg"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/toolbarSignUp"/>

    <androidx.cardview.widget.CardView
        android:layout_marginTop="20dp"
        android:layout_width="300dp"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signInIntro">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="#00337C"
            app:layout_constraintTop_toBottomOf="@id/toolbarSignUp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/SignEmail"
                    android:hint="@string/text_email"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/SignPassword"
                    android:hint="@string/text_password"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/SignInConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_confirm"
                android:textSize="18sp"
                android:background="@drawable/login_bg"
                android:layout_marginTop="10dp"
                android:textColor="@color/white" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>