<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#58287F"
    tools:context=".activities.MainActivity">


        <TextView
            android:id="@+id/logInLayoutPass"
            android:layout_marginStart="30dp"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/login_bg"
            android:gravity="start"
            android:padding="5dp"
            android:requiresFadingEdge="horizontal"
            android:text="@string/log_in"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/option_menu"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/logOut"
            android:layout_marginEnd="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/login_bg"
            android:gravity="start"
            android:padding="5dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            android:requiresFadingEdge="horizontal"
            android:text="@string/sign_out"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/option_menu"
            android:textSize="20sp"
            android:textStyle="bold" />


    <LinearLayout
        android:id="@+id/option_menu"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="?actionBarSize"
        android:gravity="center"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#58287F">

        <ImageView
            android:id="@+id/GoLocalMusic"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:background="@drawable/music_icon_bg"
            android:src="@drawable/ic_baseline_music_note_24"
            android:contentDescription="@string/local_music"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/local_music"
            android:textSize="26sp"
            android:textColor="#FAD3E7"
            android:padding="2dp"
            android:gravity="center"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/GoOnlineMusic"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:background="@drawable/music_icon_bg"
            android:src="@drawable/ic_baseline_music_note_24"
            android:contentDescription="@string/online_music"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/online_music"
            android:textSize="26sp"
            android:textColor="#FAD3E7"
            android:padding="2dp"
            android:gravity="center"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/GoEveryMusic"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:background="@drawable/music_icon_bg"
            android:src="@drawable/ic_baseline_music_note_24"
            android:contentDescription="@string/every_music"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/every_music"
            android:textSize="26sp"
            android:textColor="#FAD3E7"
            android:padding="2dp"
            android:gravity="center"
            android:textStyle="bold" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>