<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LocalMusicActivity"
    android:background="#0A2647">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarLocalMusic"
        android:background="@drawable/toolbar_bg"
        app:title="@string/app_name"
        app:titleTextColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:padding="10dp"
        android:layout_marginTop="?actionBarSize"
        android:id="@+id/LocalMusicHandler"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarLocalMusic"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/NoData"
        android:layout_marginTop="350dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_data"
        android:textSize="28sp"
        android:textColor="@color/white"
        android:padding="2dp"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/toolbarLocalMusic"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/CardViewLocalMusic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:visibility="gone"
        android:layout_margin="8dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:background="#00337C"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/LocalMusicPlayName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/music_name"
                android:textSize="28sp"
                android:textColor="@color/white"
                android:padding="2dp"
                android:gravity="center"
                android:textStyle="bold"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/MusicTimeCounterLocal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0_00"
                    android:textSize="26sp"
                    android:textColor="@color/white"
                    android:padding="2dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <SeekBar
                    android:id="@+id/MusicSeekBarLocal"
                    android:layout_width="250dp"
                    android:layout_height="30dp"
                    android:padding="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/MusicEndTimeLocal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_3_00"
                    android:textSize="26sp"
                    android:textColor="@color/white"
                    android:padding="2dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/PreviousSongLocal"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="start"
                    android:background="@drawable/music_icon_bg"
                    android:contentDescription="@string/last_music"
                    android:src="@drawable/last_song" />

                <ImageButton
                    android:id="@+id/PLayingLocal"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/play"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:contentDescription="@string/last_music"
                    android:background="@drawable/music_icon_bg"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <ImageButton
                    android:id="@+id/NextSongLocal"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/next_music"
                    android:background="@drawable/music_icon_bg"
                    android:contentDescription="@string/last_music"
                    app:layout_constraintEnd_toEndOf="parent"/>
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
